# mcp_search_images

./: .gitignore  README.md  README_EN.md  config.json.template  main.py  mcp_search_images.py  pyproject.toml  requirements.txt
examples/: dialog_example.md  dialog_example_en.md
